--- a/action.yml
+++ b/action.yml
@@ -70,3 +70,5 @@ runs:
           BUG_SUMMARY: false
           RISK_SUMMARY: false
           RISK_BREAKING: false
+          AZURE_LARGE_MODEL: gpt-35-turbo
+          AZURE_SMART_MODEL: gpt-35-turbo
